...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="clip" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sTV-TG-5Y6">
                                                <rect key="frame" x="0.0" y="0.0" width="75" height="75"/>
                                                <accessibility key="accessibilityConfiguration" identifier="userNumberModeButton"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="75" id="OIO-F0-kIJ"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="clip" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8Nq-T9-tG9">
                                                <rect key="frame" x="85" y="0.0" width="75" height="75"/>
                                                <accessibility key="accessibilityConfiguration" identifier="randomNumberModeButton"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="75" id="Mjg-d2-SKF"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="clip" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FY3-TE-eQ4">
                                                <rect key="frame" x="170" y="0.0" width="75" height="75"/>
                                                <accessibility key="accessibilityConfiguration" identifier="numberInRangeModeButton"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="75" id="7tU-vk-h0X"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="clip" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="W9Q-nd-zIJ">
                                                <rect key="frame" x="255" y="0.0" width="75" height="75"/>
                                                <accessibility key="accessibilityConfiguration" identifier="multipleNumbersModeButton"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="75" id="Vz4-6c-jlV"/>
...
                                        <rect key="frame" x="43.5" y="675.5" width="330" height="44"/>
                                        <color key="backgroundColor" red="0.98083370920000001" green="0.96713715789999999" blue="0.99053007360000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="numberInput"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="44" id="pKi-cZ-clc"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uff-7G-7Fe">
                                        <rect key="frame" x="293" y="289" width="312" height="52"/>
                                        <accessibility key="accessibilityConfiguration" identifier="displayFactButton"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="52" id="Bz0-ed-nTT"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="100" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mzg-qL-IJ8">
                                <rect key="frame" x="53" y="80" width="787" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="factLabel"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
